# Agentic-Index

./: .bandit  .env.example  .flake8  .gitignore  .markdownlint.json  .mdlrc  .pre-commit-config.yaml  .regression.yml  .trivyignore  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEX-REVIEW.md  CONTRIBUTING.md  FAST_START.md  HONOURABLE.md  IMPROVEMENT_TASKS.yaml  LICENSE  Makefile  README.md  README_DevTools.md  README_Domain-Specific.md  README_ENHANCED.md  README_Experimental.md  README_General-purpose.md  README_Multi-Agent.md  README_RAG-centric.md  ROADMAP.md  SCHEMA.md  SELF_AUDIT.md  agentindex_cli.py  agentops_cli.py  agents.md  architecture.dot  coverage.xml  dev-requirements.txt  gh_api.py  index.html  (+15 more)
.cache/: repo_octocat_Hello-World.json
.codex/: queue.yml  ticket_template.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pre-commit-ci.yml  pull_request_template.md  release-drafter.yml
CI_CD_IMPROVEMENTS/: index.html
CI_FIXES_BEFORE_AFTER/: index.html
CI_MAINTENANCE_PLAYBOOK/: index.html
CI_SETUP/: index.html
CONFLICT_RESOLUTION/: index.html
DEVELOPMENT/: index.html
E2E_TEST/: index.html
FUNKY_DEMO/: index.html
METRICS_ALERTS/: index.html
METRICS_SCHEMA/: index.html
ONBOARDING/: index.html
PERFORMANCE/: index.html
REFRESH/: index.html
REVIEW-2025-06/: index.html
ROLLBACK/: index.html
SCHEMA/: index.html
SECURITY/: index.html
agentic_index.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentic_index_api/: __main__.py  config.py  main.py  server.py  simple_app.py  sync_utils.py
agentic_index_cli/: __init__.py  __main__.py  agentic_index.py  api.py  api_server.py  cli.py  config.py  config.yaml  constants.py  enricher.py  exceptions.py  faststart.py  generate_outputs.py  github_client.py  helpers.py  inject.py  inject_readme.py  issue_logger.py  logging_config.py  network.py  plot_trends.py  prune.py  rank.py  ranker.py  render.py  scoring.py  scraper.py  task_daemon.py  templates.py  validate.py
(+384 files in other folders)
